--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "vite-typescript-react-sass-app",
-  "version": "1.0.0",
-  "description": "Minimal Vite project using TypeScript, React and TailwindCSS with Sass.",
-  "main": "src/index.tsx",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc --project tsconfig.production.json && vite build",
-    "serve": "vite preview --port 3000",
-    "lint": "eslint . --ext .ts,.tsx,.js",
-    "prepare": "husky install",
-    "test": "jest"
-  },
-  "author": "Tarang Janawalkar",
-  "license": "MIT",
-  "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@jest/types": "^27.5.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "17",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "@vitejs/plugin-react": "^1.2.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-watch": "^8.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "path": "^0.12.7",
-    "postcss": "^8.4.6",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.49.7",
-    "tailwindcss": "^3.0.19",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.0"
-  }
+    "name": "vite-typescript-react-sass-app",
+    "version": "1.0.0",
+    "description": "Minimal Vite project using TypeScript, React and TailwindCSS with Sass.",
+    "main": "src/index.tsx",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc --project tsconfig.production.json && vite build",
+        "serve": "vite preview --port 3000",
+        "lint": "eslint . --ext .ts,.tsx,.js",
+        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+        "prepare": "husky install",
+        "test": "jest"
+    },
+    "author": "Tarang Janawalkar",
+    "license": "MIT",
+    "devDependencies": {
+        "@commitlint/cli": "^16.1.0",
+        "@commitlint/config-conventional": "^16.0.0",
+        "@jest/types": "^27.5.1",
+        "@types/jest": "^27.4.0",
+        "@types/node": "17",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.11.0",
+        "@typescript-eslint/parser": "^5.11.0",
+        "@vitejs/plugin-react": "^1.2.0",
+        "eslint": "^8.8.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-watch": "^8.0.0",
+        "husky": "^7.0.4",
+        "jest": "^27.5.1",
+        "path": "^0.12.7",
+        "postcss": "^8.4.6",
+        "prettier": "^2.5.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "sass": "^1.49.7",
+        "tailwindcss": "^3.0.21",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.5.5",
+        "vite": "^2.8.1"
+    }
 }
