--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "sass": "^1.49.7",
         "tailwindcss": "^3.0.21",
         "ts-jest": "^27.1.3",
+        "ts-node": "^10.5.0",
         "typescript": "^4.5.5",
         "vite": "^2.8.1"
     }
